--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -166,7 +166,7 @@ The following list describes the level of time zone awareness of all supported p
 | [Garmin](https://www.garmin.com)                                              `garmin`               | At Source              | UTC only               |
 | [Google Fit](https://www.google.com/fit/)                                     `google_fit`           | Vital Fallback TZ or UTC | UTC only               |
 | [Samsung Health](https://www.samsung.com/global/galaxy/apps/samsung-health/)  `samsung_health`       |                        |                        |
-| [Oura](https://ouraring.com)                                                  `oura`                 | UTC only               | UTC only               |
+| [Oura](https://ouraring.com)                                                  `oura`                 | At source              | UTC only               |
 | [Peloton](https://www.onepeloton.com)                                         `peloton`              | At Source              | UTC only               |
 | [Renpho](https://renpho.com)                                                  `renpho`               | At Source              | UTC only               |
 | [Strava](https://www.strava.com)                                              `strava`               | At Source              | UTC only               |
