--- a/docs/wearables/providers/guides/fitbit.mdx
+++ b/docs/wearables/providers/guides/fitbit.mdx
@@ -8,4 +8,4 @@ There is one caveat with Fitbit's webhooks. Namely, Fitbit computes the basal me
 
 This can be confusing at times, as someone who is not aware of this might wonder why are they getting only this one webhook and not the others.
 
-If you are only getting `daily.data.activity.updated`, the most likely case is that the user is neither not wearing the device, or they did not sync their device with the Fitbit app. If you are sure this is not the case, contact us through our support channels.
+If you are only getting `daily.data.activity.updated`, the most likely case is that the user is neither wearing the device, or they did not sync their device with the Fitbit app. If you are sure this is not the case, contact us through our support channels.
