lab testing documentation

--- a/docs/home/quickstart.mdx
+++ b/docs/home/quickstart.mdx
@@ -102,8 +102,8 @@ curl --request POST \
      --url {{BASE_URL}}/v2/user/ \
      --header 'Accept: application/json' \
      --header 'Content-Type: application/json' \
-     --header 'x-vital-api-key: <your_api_key>' \
-     --data '{"client_user_id":"<your_user_id>"}'
+     --header 'x-vital-api-key: <YOUR_API_KEY>' \
+     --data '{"client_user_id":"<YOUR_CLIENT_USER_ID>"}'
 ```
 
 ```js JavaScript
