--- a/docs/lab/overview/testing-modalities.mdx
+++ b/docs/lab/overview/testing-modalities.mdx
@@ -2,11 +2,13 @@
 title: "Testing Modalities"
 ---
 
+By integrating with our API, you will have access to all testing modalities.
+
 Three types are currently supported:
 
-- At home test kit
-- At home phlebotomy visit
-- In lab phlebotomy visit
+- At-home test kit.
+- At-home phlebotomy visit.
+- In-lab phlebotomy visit.
 
 ## At-home test kits
 
@@ -34,11 +36,11 @@ Additional components can be included in the test kit box, to fully customize th
   <img src="/img/wyndly.png" className="w-1/2 h-1/2" />
 </div>
 
-## In lab phlebotomy
+## In-lab phlebotomy
 
-In lab draws involve the patient going to a lab location either Quest or Labcorp, to carry out the test.
+In-lab draws involve the patient going to a lab location, either Quest or Labcorp, to carry out the test.
 To carry out this test you need a requisition form. Vital's API can generate this for you, if the patient meets certain conditions. Results are then retrieved via Vital's API.
 
 ## At-home phlebotomy
 
-At-home phlebotomy requires mobile phlebotmists visiting a patient at their home and carrying out the phlebotomy draw. The sample is then delivered to the lab by the phlebotomist.
+At-home phlebotomy requires mobile phlebotomists visiting a patient at their home and carrying out the phlebotomy draw. The sample is then delivered to the lab by the phlebotomist.
