review with Naiara

--- a/docs/lab/overview/introduction.mdx
+++ b/docs/lab/overview/introduction.mdx
@@ -6,7 +6,7 @@ Vital's lab test API allows digital health companies to carry out at-home lab te
 Companies can use the API to order a variety of tests, using various sampling methods.
 
 We partner with CLIA and CAP certified labs across the United States that cover a variety of diagnostic tests. For example lipids panels, metabolic profiles, hormone tests and more.
-We collect these test samples via dried bloodspot, saliva or phlebotomy.
+We collect these test samples via at-home kits, or phlebotomy.
 
 ### Features
 
@@ -15,10 +15,9 @@ Our lab test API gives you an end-to-end experience, from ordering a test all th
 What we offer:
 
 * Multiple [test modalities](/lab/overview/testing-modalities) through one unified API.
-* No Physician required - you can use your own physician if you have one, or we will automatically assign one from our network.
+* 50 State Physician network - you can use your own physician if you have one, or we will automatically assign one from our network.
 * Updates throughout the test lifecycle - we automatically send you webhook updates and SMS updates to your patients so that you both never miss an update.
 * Test results: we will update you once the test results are ready. In case of abnormal results, we also provide follow-ups through our Physician network.
-* Optional uploading of health insurance card: we support providing your patients health insurance cards for insurance billing.
 * 1:1 support: after production launch, you will have direct access to slack and 1:1 support with our engineers.
 
 ### Start integrating
@@ -27,21 +26,21 @@ You can sign-up today to our sandbox environment. The [quickstart](/lab/overview
 
 ### Production launch
 
-As a first step, we need to define what type of testing you want to offer to your users. We will have an introduction call to go over the test, projected volumes, customizations for kits and other questions you might have. Once we have all this information, we can begin setting up the test kits and distribution. Finally, we can set up your integration and dashboard to start ordering tests via our API.
+As a first step, we need to define what type of testing you want to offer to your users. We will have an introduction call to go over the test, projected volumes, customizations for kits and other questions you might have. Once we have all this information, we will begin setting up the test kits for distribution. Finally, once the integration is complete, you will have access to the dashboard to start ordering tests via our API.
 
 In [this page](https://tryvital.io/testing), you can check out some examples of the test panels we offer, and book an introductory call with us.
 
 ### Support
 
-You will be assisted throughout the integration process with Vital. After launch, you will have a dedicated account manager with access to slack, and 1:1 support with our engineers.
+You will be assisted throughout the integration process with Vital. After launch, you will have a dedicated account manager with access to Slack, and 1:1 support with our engineers.
 
 ### Coverage
 
 Our lab test API is available throughout the US. This is our current coverage by test modality:
 
 * [At-home test kits](/lab/overview/testing-modalities#at-home-test-kits): 49 states (all excluding NY).
-* [In-lab phlebotomy](/lab/overview/testing-modalities#in-lab-phlebotomy): 49 states (all excluding NY).
-* [At-home phlebotomy](/lab/overview/testing-modalities#at-home-phlebotomy): 19 states at the moment.
+* [Walk-in tests](/lab/overview/testing-modalities#walk-in-tests): 49 states (all excluding NY).
+* [At-home phlebotomy](/lab/overview/testing-modalities#at-home-phlebotomy): 19 states at the moment. Full coverage coming soon.
 
 <Info>
 To find out more about our coverage, you can use the [area info endpoint](/api-reference/lab-testing/area-info), which takes a zip code and tells you whether that area is covered by our service. Or you can contact us at support@tryvital.io for more info.
