--- a/docs/lab/overview/quickstart.mdx
+++ b/docs/lab/overview/quickstart.mdx
@@ -129,7 +129,7 @@ curl --request POST \
     "country": "U.S.",
     "phone_number": "+14158180852"
   },
-  "diagnostic_lab_test_id": "3fa85f64-5717-4562-b3fc-2c963f66afa6",
+  "lab_test_id": "3fa85f64-5717-4562-b3fc-2c963f66afa6",
   "physician": {
     "first_name": "John",
     "last_name": "Doe",
