--- a/docs/lab/workflow/cancelling-an-order.mdx
+++ b/docs/lab/workflow/cancelling-an-order.mdx
@@ -13,7 +13,7 @@ It's possible to cancel it by making a request to the [cancel endpoint](/lab/wor
 <Warning>
 When it comes to cancelling an order, to avoid the financial costs associated with late cancelling, we advise the following:
 
-* The sooner you cancel the order, the more likely the cancellation will go through.
+* For test-kits, we recommend cancelling the order before it's shipped. Kits are typically shipped within 24 hours after they are ordered.
 * For at-home phlebotomy, appointments can be cancelled without consequence with a notice of at least 24 hours. Cancelling an order with less than 24h notice may incur a financial cost.
 </Warning>
 
