--- a/docs/lab/overview/testing-modalities.mdx
+++ b/docs/lab/overview/testing-modalities.mdx
@@ -8,7 +8,7 @@ Three types are currently supported:
 
 - At-home test kit.
 - At-home phlebotomy visit.
-- In-lab phlebotomy visit.
+- Walk-in test visit.
 
 ## At-home test kits
 
@@ -21,11 +21,11 @@ At home testing kits are comprised of a number of components such as:
   <div>
 
 - Mailer Box
-- Blade Lancers
+- Blade Lancets
 - Plasters
 - Gauze
 - ADX Card
-- Whatman Paper
+- Blood collection card
 - Saliva Tubes
 - Collection Supplies
 - Instruction Booklet
@@ -49,13 +49,13 @@ The flow for at-home phlebotomy orders is as follows:
 - Once the appointment takes place and the sample is drawn, it will be taken to the lab.
 - Once the lab analyzes the results, the order is complete and you can [fetch the results](/lab/results/result-formats).
 
-## In-lab phlebotomy
+## Walk-in tests
 
 In-lab draws involve the patient going to a lab location, either Quest or Labcorp, to carry out the test.
 To carry out this test you need a requisition form. Vital's API can generate this for you, if the patient meets certain conditions. Results are then retrieved via Vital's API.
 
-The flow of an in-lab phlebotomy test is very similar to the at-home phlebotomy one. The only difference is that the patient does not book an appointment beforehand, but directly goes to the lab instead.
+The flow of an walk-in test is very similar to the at-home phlebotomy one. The only difference is that the patient does not book an appointment beforehand, but goes directly to the lab instead.
 
 <Info>
-A patient might book an appointment with Labcorp or Quest for in-lab phlebotomy tests, instead of directly going to the lab. We don't support tracking such appointments through our API yet. But we might add this capability in the future!
+A patient might book an appointment with Labcorp or Quest for walk-in phlebotomy tests, instead of directly going to the lab. We don't support tracking such appointments through our API yet. But we might add this capability in the future!
 </Info>
