--- a/docs/lab/overview/introduction.mdx
+++ b/docs/lab/overview/introduction.mdx
@@ -3,7 +3,7 @@ title: "Introduction"
 ---
 
 Vital's lab test API allows digital health companies to carry out at-home lab testing.
-Companies can use the API to order a variety of tests, using various sampling methods.
+Companies can use the API to order a variety of tests, using multiple sampling methods.
 
 We partner with CLIA and CAP certified labs across the United States that cover a variety of diagnostic tests. For example lipids panels, metabolic profiles, hormone tests and more.
 We collect these test samples via at-home kits, or phlebotomy.
