--- a/docs/lab/overview/introduction.mdx
+++ b/docs/lab/overview/introduction.mdx
@@ -5,7 +5,7 @@ title: "Introduction"
 Vital's lab test API allows digital health companies to carry out at-home lab testing.
 Companies can use the API to order a variety of tests, using multiple sampling methods.
 
-We partner with CLIA and CAP certified labs across the United States that cover a variety of diagnostic tests. For example lipids panels, metabolic profiles, hormone tests and more.
+We partner with CLIA and CAP certified labs across the United States that cover a range of different diagnostic tests. For example lipids panels, metabolic profiles, hormone tests and more.
 We collect these test samples via at-home kits, or phlebotomy.
 
 ### Features
@@ -18,7 +18,7 @@ What we offer:
 * 50 State Physician network - you can use your own physician if you have one, or we will automatically assign one from our network.
 * Updates throughout the test lifecycle - we automatically send you webhook updates and SMS updates to your patients so that you both never miss an update.
 * Test results: we will update you once the test results are ready. In case of abnormal results, we also provide follow-ups through our Physician network.
-* 1:1 support: after production launch, you will have direct access to slack and 1:1 support with our engineers.
+* 1:1 support: after production launch, you will have direct access to Slack and our engineers.
 
 ### Start integrating
 
@@ -26,13 +26,13 @@ You can sign-up today to our sandbox environment. The [quickstart](/lab/overview
 
 ### Production launch
 
-As a first step, we need to define what type of testing you want to offer to your users. We will have an introduction call to go over the test, projected volumes, customizations for kits and other questions you might have. Once we have all this information, we will begin setting up the test kits for distribution. Finally, once the integration is complete, you will have access to the dashboard to start ordering tests via our API.
+As a first step, we need to define what type of testing you want to offer to your users. We will have an introduction call to go over the test, projected volumes, customizations for kits and other questions you might have. Once we have all this information, we will begin setting up the test kits for distribution. Once the integration is complete, you will have access to the dashboard to start ordering tests via our API.
 
 In [this page](https://tryvital.io/testing), you can check out some examples of the test panels we offer, and book an introductory call with us.
 
 ### Support
 
-You will be assisted throughout the integration process with Vital. After launch, you will have a dedicated account manager with access to Slack, and 1:1 support with our engineers.
+We will assist you throughout the whole integration with Vital. After launch, you will have a dedicated account manager with access to Slack, and 1:1 support with our engineers.
 
 ### Coverage
 
@@ -43,5 +43,5 @@ Our lab test API is available throughout the US. This is our current coverage by
 * [At-home phlebotomy](/lab/overview/testing-modalities#at-home-phlebotomy): 19 states at the moment. Full coverage coming soon.
 
 <Info>
-To find out more about our coverage, you can use the [area info endpoint](/api-reference/lab-testing/area-info), which takes a zip code and tells you whether that area is covered by our service. Or you can contact us at support@tryvital.io for more info.
+To find out more about our coverage, you can use the [area info endpoint](/api-reference/lab-testing/area-info) - this endpoint takes a zip code and tells whether that area is covered by our service or not. Or you can contact us at support@tryvital.io for more info.
 </Info>
